# tapiro-rust

./: .env  Cargo.toml
src/: controller.rs  main.rs  service.rs
templates/: assign.html  edit.html  landing.html  login.html  register.html  tag.html
