[package]
name = "tapiro-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = { version = "0.5.3" }
askama = "0.14.0"
axum = "0.8.4"
axum-extra = { version = "0.10.1", features = ["form"] }
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "uuid"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.6", features = ["normalize-path"] }
tower-layer = "0.3.3"
tower-sessions = "0.14.0"
tower-sessions-sqlx-store = { version = "0.15.0", features = ["postgres"] }
